# Nebula

./: README.md  dfx.json  generate-bucket-wasm.sh  generate-wasm.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
src/backend/: Cargo.toml  backend.did  bucket-opt.wasm  helpers.rs  helpers_bucket.rs  lib.rs  main.rs  services_auth.rs  services_bucket.rs  services_models.rs  services_telemetry.rs  types.rs  utilities.rs
src/bucket/: Cargo.toml  bucket.did  helpers.rs  lib.rs  main.rs  services.rs  types.rs  utilities.rs
src/client_web/assets/: bucket-opt.wasm
src/client_web/src/: index.html  index.tsx
src/client_web/src/_home/: HomeScreen.tsx
src/client_web/src/_models/: AddDataFieldUtility.tsx  CreateDataModelUtility.tsx  DeleteModelUtility.tsx  ModelListScreen.tsx  RemoveDataFieldUtility.tsx
src/client_web/src/_tables/: CreateModelInstanceUtility.tsx  CreateRecordUtility.tsx  ModelTablesScreen.tsx  RecordTablesScreen.tsx  RecordsTable.tsx
src/client_web/src/_user/: AddTrusterCanisterUtility.tsx  AuthGate.tsx  CreateAccountUtility.tsx  ProfileScreen.tsx  RemoveTrustedCanister.tsx  SignInScreen.tsx  SignOutUtility.tsx
src/client_web/src/_vault/: CreateFolderUtility.tsx  CreateGroupUtility.tsx  CreateProposalUtility.tsx  HomeScreen.tsx  VoteOnProposalUtility.tsx
src/client_web/src/components/: ButtonGroupSelect.tsx  Checklist.tsx  (+10 more)
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
src/declarations/bucket/: bucket.did  bucket.did.d.ts  bucket.did.js
src/declarations/client_web/: index.js
(+9 files in other folders)
