[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = "1.0"
serde_bytes = "0.11.5"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "^1.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
rust-argon2 = "1.0.0"