[package]
name = "bucket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = "1.0"
serde_bytes = "0.11.5"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "^1.0"
bincode = "1.3.3"